--- a/styleSheet.css
+++ b/styleSheet.css
@@ -1,4 +1,6 @@
-
+*{
+    box-sizing: border-box;
+}
 body{
     background-repeat: no-repeat;
     background-image: url("https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
@@ -9,7 +11,6 @@ body{
     color: white;
     font-size: 10vw;
     /*background-color: black;*/
-    
     margin-top: 0%;
     text-align: center;
 }
@@ -46,6 +47,7 @@ body{
     text-align: center;
 }
 .intro p{
+    position: relative;
     margin-top: 0%;
     font-size: 4vw;
     float: left;
@@ -72,16 +74,13 @@ body{
     float: left;
     width: 100%;
 }
-.selector img{
-    float: right;
-    height: 45%;
-    width: 50%;
-}
+
 .selector dt{
     font-size: 3vw;
     float: left;
 }
 .selector dd{
+    position: relative;
     font-size: 3vw;
     margin-left: 10%;
 }
