--- a/styleSheet.css
+++ b/styleSheet.css
@@ -106,3 +106,11 @@ body{
     padding-top: 1%;
     padding-bottom: 1%;
 }
+.text{
+    color:white;
+    width: 100%;
+}
+.text h1{
+    font-size: 6vw;
+    text-align: center;
+}
