--- a/styleSheet.css
+++ b/styleSheet.css
@@ -114,3 +114,41 @@ body{
     font-size: 6vw;
     text-align: center;
 }
+.text h2{
+    text-align: left;
+    font-size: 5vw;
+    margin-left: 1vw;
+}
+.text h3{
+    text-align: left;
+    font-size: 4vw;
+    margin-left: 3vw;
+}
+.text ol{
+    font-size: 3vw;
+    margin-left: 5%;
+}
+.text a{
+    font-size: 3vw;
+    text-align: center;
+    width: 100%;
+    margin-left: 40%;
+    margin-bottom: 50%;
+
+}
+.text a:visited{
+    color: red;
+    font-size: 4vw;
+}
+.text a:hover{
+    color:white;
+    letter-spacing: 2px;
+    background-color: red;
+}
+.text a:link{
+    text-decoration: none;
+    color:orangered;
+}
+.text a:active{
+    color:blanchedalmond;
+}
